            - Changed from simple ordered pair to its own full class.
        Class NIndexedArray:
            - Added.
        Class NLocalFileResource:
            - Replaced static members MODE_READ, MODE_WRITE with static
              routines sysModeRead(), sysModeWrite().
        Class NNormalSurfaceList:
            - New nested class NNormalSurfaceList::SurfaceInserter.
        Class NScript:
            - Changed list of variables to a proper map and removed routines
              getVariableIndex() and removeVariableAt().
            - Insistance on unique variable names; in enforcing this
              routine addVariable() now returns bool.
        Class NSignature, NSigCensus, NSigPartialIsomorphism:
            - Added.
        Class NString:
            - Added C++ string copy constructor.
        Class NTriangulation:
            - Added insertSplittingSurface().
            - Uses NIndexedArrays for skeletal elements for fast index lookup.
        Class NXMLCallback, NXMLElementReader, NXMLPacketReader:
            - Added.
        Class reference_wrapper, remove_pointer:
            - Added for use with Standard Template Library.
        Class select1st, select2nd, unary_compose:
            - Added for use with Standard Template Library.
        Class XMLParser, XMLParserCallback:
            - Added.
        Class ZBuffer, CompressionBuffer, DecompressionBuffer,
                CompressionStream, DecompressionStream:
            - Added.
        Routine basicTokenise(), duplicate():
            - Added.
        Routine readFileMagic(), readXMLFile(), writeXMLFile():
            - Added.
        Routine xmlEncodeSpecialChars(), xmlValueTag():
            - Added.
    JAVA USER INTERFACE:
        Overall structure:
            - Incorporated engine enhancements listed above.
        normal.engine.implementation.jni.JNIShareableObject:
            - Added static method sameCppPtr() which is necessary when
              using gcc3.